<resources>
    <string name="app_name">Book Store</string>
    <string name="priceHeader">Retail Price: £0 </string>
    <string name="ab_publication_date">Publication date</string>
    <string name = "ab_submit_btn" >Add book</string>
    <string name = "ab_description" >Description/Summary</string>
    <string name = "ab_isbn" >ISBN-13</string>
    <string name = "ab_author" >Author</string>
    <string name = "ab_title" >Title of the book</string>
    <string name = "nav_home">Home</string>
    <string name = "nav_orders">Orders</string>
    <string name = "nav_books">Books</string>
    <string name = "nav_cart">Cart</string>
    <string name="nav_add_book">Add book</string>
    <string name="add_book">Add Book</string>
    <string name="sold_book">Sold Book</string>
    <string name="available_book">Available Book</string>
    <string name="sold_number"> 5</string>
    <string name="available_number">3</string>

    <string name="label_item_name">Item Name</string>
    <string name="proceed_to_checkout">Checkout</string>
    <string name="text_total">Total</string>
    <string name="view_orders">View Order</string>
    <string name="title">Book Title</string>
    <string name="label_id">Order ID</string>
    <string name="label_price">Total Price</string>
    <string name="logout">Logout</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="empty_cart">Cart is empty!</string>
</resources>